--- a/latex/Thesis/citations.bib
+++ b/latex/Thesis/citations.bib
@@ -1,3 +1,11 @@
+@misc{rns2018,
+	author = {Rajendra Kumar and Nikhil Mittal and Shashank Singh},
+	title = {Cryptanalysis of 2-round KECCAK-384},
+	howpublished = {Cryptology ePrint Archive, Report 2018/1191},
+	year = {2018},
+	note = {\url{https://eprint.iacr.org/2018/1191}},
+}
+
 @inproceedings{naya2011practical,
   title={Practical analysis of reduced-round keccak},
   author={Naya-Plasencia, Mar{\'\i}a and R{\"o}ck, Andrea and Meier, Willi},
